Added solver with model definition an example
